test/fail/actor-class-generic.mo
actor class C<T>(){}; // reject: parametric actor class
